--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <img src="/rice2.jpg" alt="image of the jollof rice" srcset="" id="top">
+    <img src="rice2.jpg" alt="image of the jollof rice" srcset="" id="top">
     <!-- the links to the various sections -->
     <h3>Go to any of the followings sections</h3>
     <h2><a href="#intro">Recipe for Jollof Rice</a></h2>
@@ -78,7 +78,7 @@
          <!-- end of the ingredients section -->
 
           <!-- images of the recipe -->
-           <img src="/rice_re.png" alt="recipe for Jollof" srcset="" width="350px">
+           <img src="rice_re.png" alt="recipe for Jollof" srcset="" width="350px">
 
          <!-- the instructions section -->
           <section>
@@ -104,7 +104,7 @@
      <!-- End of the main content section -->
 
     <!-- images of the jollof rice -->
-     <img src="/rice1.jpg" alt="image of the jollof rice" srcset=""> <br>
+     <img src="rice1.jpg" alt="image of the jollof rice" srcset=""> <br>
     <h1><a href="#top">Back to Top</a></h1> 
    
     
